icons and design

--- a/css/main.styl
+++ b/css/main.styl
@@ -1,113 +1,117 @@
 support-for-ie  = false
 vendor-prefixes = official
-
-@import '../node_modules/nib'
+nibdir = '../node_modules/nib'
+@import nibdir
 @import 'reset'
+@import 'utils'
+@import 'icons'
 
-
-step = 16px
 
 html, body
   min-width 600px
   height 100%
 
 body
-  color #333
+  color txtClr
   font normal 13px/step Helvetica, arial, freesans, clean, sans-serif
 
-.head
-  background #f3f3f3 linear-gradient(#f9f9f9, #f3f3f3) repeat-x
-  text-shadow 0 1px 0 #fff
-
-.btn
-  border 1px solid #ccc
-  background #fff linear-gradient(#fff, #eee) repeat-x
-  text-shadow 0 1px 0 #fff
-  padding 0 (step/2)
-  cursor pointer
-  line-height (step*1.5)
-
 header
-  @extend .head
-  padding (step/2)
-  h4
-    display inline-block
+  headGr
+  text-shadow 0 1px 0 #fff
+  padding step
 
 nav
   font-size 0
   display inline-block
+  padding (step/2) 0
 
-  button
-    @extend .btn
-    margin: 0 0 0 -1px
+  button,input
+    btn()
     &:nth-child(1)
-      border-radius 3px 0 0 3px
+      radiusLeft()
     &:last-child
-      border-radius 0 3px 3px 0
+      radiusRight()
 
-label
-  iconic-stroke('../node_modules/nib/iconic')
-  display block
-  padding 0 (step/4)
-  border-bottom 1px solid #e5e5e5
-  line-height (step*3)
-  input
-    padding 0 (step/4)
-    border 1px solid #ddd
-    line-height (step*2)
-    border-radius 5px
+.search
+  padding step
+  input[type="radio"]
+    size: (step*1.5)
+    &:checked
+      btnGrHov()
+      text-shadow 0 -1px 0 #fff
+
+#search
+  padding 0 (step/2)
+  brd()
+  lh(step*2)
+  border-radius 5px
+  width 100%
+  border none
 
 #bookmarks
   padding (step*2)
   position relative
-  li
-    font-size 0
+  ul,li,a
     vertical-align top
     position relative
-
+  li
+    transition all 0.35s
     ul
-      vertical-align top
-      padding 0 0 0 16px
-      clearfix()
-      box-shadow 0 -1px 0 0 skyblue
-      position absolute
-      opacity 0
       transition all 0.35s
-
-    a
-      vertical-align top
-      overflow hidden
-      text-decoration none
-  .kid
+      padding 0 0 0 step
+      overflow: hidden
+      height 0
+      opacity 0
+      clearfix()
+      brd(0 -1px 0 0 brdClr)
+  .kid.row
     float left
     size: (step*2)
     > a
       size: (step*2)
       display inline-block
-      background skyblue
-      color #fff
-      box-shadow 0 0 0 1px #fff
+      overflow hidden
+      &:before
+        @extend $glyph
+        content: '\e88b'
+
       &:hover
         position  absolute
         size: (step*8)
         padding (step/2)
         z-index 999
-        background crimson
+        background selClr
         font-size 12px
+
+  .kid.col
+    padding (step/2)
+    border-bottom: 1px dashed #ccc
+    display: inline-block
+    width 25%
+    &:last-child
+      border none
+    > a
+      &:before
+        @extend $glyph
+        content: '\e88b'
+
   .dad
-    box-shadow -1px 0 0 skyblue
+    brd(-1px 0 0 brdClr)
     clear both
     > a
-      box-shadow 0 -1px 0 skyblue
-      padding 0 8px
+      brd(0 -1px 0 brdClr)
+      headGr()
+      padding 0 (step/2)
       display block
-      font-size 12px
-      color skyblue
-      line-height (step*2)
-
+      lh()
+      &:before
+        @extend $glyph
+        content: '\e818'
   .show
+    height auto
     > a
-      background mistyrose
+      btnGrHov()
+      color selClr
     > ul
-      position relative
-      opacity 1
+      opacity: 1
+      height 100%
