--- a/css/reset.styl
+++ b/css/reset.styl
@@ -17,6 +17,12 @@ ol, li, ul
   list-style none
 
 html,button,input,select,textarea
+
+  font-family sans-serif
+  box-sizing border-box
+
+button,input,select
+  outline none
   font-family sans-serif
   box-sizing border-box
 
@@ -30,6 +36,11 @@ html,button,input,select,textarea
 
 code, kbd, pre, samp
   font 1em/1.4 monospace, serif
+
+a, button, [type="radio"], [type="checkbox"]
+  text-decoration none
+  cursor pointer
+  outline none
 
 // .tabbed
 //   border-radius 5px
