--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -6,7 +6,7 @@ iconFont(path, fnt)
     font-weight: normal
     font-style: normal
 
-iconFont('font', 'fontello')
+iconFont('../css/font', 'fontello')
 
 $glyph
   font-family: "fontello"
