--- a/styles/bookmarks.styl
+++ b/styles/bookmarks.styl
@@ -5,35 +5,30 @@
   max-width: 45%
   box-sizing: border-box
   vertical-align: top
+
   ul,li,a
     vertical-align top
     position relative
+
   li ul
     brd(0 -1px 0 0 brdClr)
 
-  li.bmdir
+  li[data-children]
     brd(-1px 0 0 brdClr)
     transition max-height 0.5s
     max-height (step*2)
+    > ul
+      transition opacity 0.6s
+      padding 0 0 0 step
+      opacity: 0
+    > a
+      brd(0 -1px 0 brdClr)
+      headGr()
+      padding 0 (step/2)
+      display block
+      lh()
 
-  li.bmdir > a
-    brd(0 -1px 0 brdClr)
-    headGr()
-    padding 0 (step/2)
-    display block
-    lh()
-    &:before
-      content: '\e818'
-
-  li[data-children="0"] > a:before
-    content: '\e88c'
-
-  li[data-children] > ul
-    transition opacity 0.6s
-    padding 0 0 0 step
-    opacity: 0
-
-  li.bmdir.show
+  li.show[data-children]
     max-height 9999px
     > ul
       opacity: 1
@@ -41,12 +36,13 @@
       btnGrHov()
       color selClr
 
-  li.bmark
+  li:not([data-children])
     padding (step/2)
-    border-bottom: 1px dashed #ccc
-    display: inline-block
-    width 25%
+    border-bottom 1px dashed #ccc
+    // display inline-block
+    // width 25%
+    // .results &
+    //   display block !important
+    //   width 100% !important
     &:last-child
       border none
-    a:before
-      content: '\e88b'
