--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -13,7 +13,6 @@ $glyph
   display: inline-block
   text-decoration: none
   margin-right: 4px
-  size: 16px
   font-weight: normal
   font-style: normal
 
@@ -50,10 +49,10 @@ $glyph
 // folders
 
 a.ico:not(.toggle):before
-  content: '\e88b'
+  content: '\e806'
 a.ico.toggle:before
   content: '\e893'
   [data-children="0"] > &
-    content: '\e88c'
+    content: '\e813'
   .show > &
     content: '\e894'
