--- a/styles/utils.styl
+++ b/styles/utils.styl
@@ -2,9 +2,9 @@ step = 16px
 txtClr = #333
 midClr = #ddd
 brdClr = #ccc
-actClr = skyblue
 hovClr = steelblue
-selClr = olive
+actClr = #555
+selClr = #555
 
 gradient1 = #fff
 gradient2 = #ddd
@@ -12,7 +12,7 @@ gradient2 = #ddd
 bgClr = #eee
 btnClr = slategrey
 a
-  color btnClr
+  color #777
 
 headGr()
   background #fff linear-gradient(#f9f9f9, #f3f3f3) repeat-x
