--- a/styles/bookmarks.styl
+++ b/styles/bookmarks.styl
@@ -1,4 +1,4 @@
-#bookmarks, .results
+#bookmarks, #results
   position relative
   display: inline-block
   padding: step
@@ -15,10 +15,10 @@
 
   li[data-children]
     brd(-1px 0 0 brdClr)
-    transition max-height 0.5s
+    transition max-height 0.25s
     max-height (step*2)
     > ul
-      transition opacity 0.6s
+      transition opacity 0.35s
       padding 0 0 0 step
       opacity: 0
     > a
