search and sort, starting edit

--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -46,6 +46,11 @@ $glyph
 .ico.find:before
   content: "\e800"
 
+.ico.remove:before
+  content: "\e873"
+.ico.edit:before
+  content: "\e80c"
+
 // folders
 
 a.ico:not(.toggle):before
