--- a/styles/main.styl
+++ b/styles/main.styl
@@ -35,9 +35,10 @@ header
   margin-left sidebarWidth
   box-shadow 0 1px 0 #ccc, 0 2px 0 #fff
 
-
-
-
+#tools
+  position: fixed
+  box-shadow 0 1px 3px rgba(0,0,0,0.5)
+  z-index: 999
 
 @import 'nav'
 @import 'bookmarks-2'
