--- a/styles/bookmarks-2.styl
+++ b/styles/bookmarks-2.styl
@@ -1,9 +1,12 @@
+dirColor  = darkslateblue
+itemColor = teal
+
 #bookmarks, #results
   font-size: 12px
   box-sizing: border-box
   vertical-align: top
 
-  ul,li,a
+  ul,li,b,q
     vertical-align top
     position relative
     ellipsis()
@@ -15,21 +18,48 @@
       transition opacity 0.35s
       padding 0 0 0 step
       opacity: 0
-    > a
+    > b
       display block
-      color actClr
-      font-size 13px
+      color dirColor
       lh(step*1.5)
 
   li.show[data-children]
     max-height 9999px
     > ul
       opacity: 1
-    > a
-      color selClr
 
   li:not([data-children])
     padding (step/4)
-    box-shadow 0 1px 0 #ddd, 0 2px 0 #fff
-    > a
+    > b
+      color itemColor
       pointer-events none
+      font-weight: normal
+    > q
+      display none
+
+  [contentEditable]
+    w = (step/8)
+    padding 0 !important
+    background brdClr
+    outline none
+    rd()
+    b, q
+      color hovClr
+      pointer-events all
+      background: #fff
+      padding: (step/4)
+      margin: w (step*4) w w
+      display: block !important
+    b
+      rd(3px 0 0 0)
+    q
+      rd(0 0 0 3px)
+
+    button
+      btn()
+      radiusRight()
+      width ((step*4) - (step/4))
+      position absolute
+      right w
+      top w
+      bottom w
