--- a/styles/bookmarks.styl
+++ b/styles/bookmarks.styl
@@ -1,48 +1,67 @@
-#bookmarks, #results
-  position relative
-  display: inline-block
-  padding: step
-  max-width: 45%
+dirColor  = #777
+itemColor = teal
+
+.bmm
+  padding step
+  font-size: 12px
   box-sizing: border-box
   vertical-align: top
 
-  ul,li,a
+  ul,li,b,q
     vertical-align top
     position relative
-
-  li ul
-    brd(0 -1px 0 0 brdClr)
-
+    ellipsis()
+  li
+    stripe(#f0f0f0, #f5f5f5)
   li[data-children]
-    brd(-1px 0 0 brdClr)
     transition max-height 0.25s
-    max-height (step*2)
+    max-height (step*1.5)
     > ul
       transition opacity 0.35s
       padding 0 0 0 step
       opacity: 0
-    > a
-      brd(0 -1px 0 brdClr)
-      headGr()
-      padding 0 (step/2)
+    > b
       display block
-      lh()
+      color dirColor
+      lh(step*1.5)
 
   li.show[data-children]
     max-height 9999px
     > ul
       opacity: 1
-    > a
-      btnGrHov()
-      color selClr
 
   li:not([data-children])
-    padding (step/2)
-    border-bottom 1px dashed #ccc
-    // display inline-block
-    // width 25%
-    // .results &
-    //   display block !important
-    //   width 100% !important
-    &:last-child
-      border none
+    padding (step/4)
+    > b
+      color itemColor
+      pointer-events none
+      font-weight: normal
+    > q
+      display none
+
+  [contentEditable]
+    w = (step/8)
+    padding 0 !important
+    background brdClr
+    outline none
+    rd()
+    b, q
+      color hovClr
+      pointer-events all
+      background: #fff
+      padding: (step/4)
+      margin: w (step*4) w w
+      display: block !important
+    b
+      rd(3px 0 0 0)
+    q
+      rd(0 0 0 3px)
+
+    button
+      btn()
+      radiusRight()
+      width ((step*4) - (step/4))
+      position absolute
+      right w
+      top w
+      bottom w
