--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -49,11 +49,15 @@ $glyph
 
 
 .ico.remove:before
-  content: "\e873"
+  // content: "\e873"
+  content: "\e816"
 .ico.edit:before
-  content: "\e80c"
+  // content: "\e80c"
+  content: "\e864"
 .ico.save:before
-  content: "\e844"
+  content: "\e872"
+.ico.cancel:before
+  content: "\e873"
 
 
 
@@ -70,300 +74,3 @@ b.ico.toggle:before
 
 .ico.link:before
   content: "\e804"
-
-
-
-// .ico.bookmark-1:before
-//   content: "\e88b"
-// .ico.bookmark-empty:before
-//   content: "\e88c"
-// .ico.book-2:before
-//   content: "\e88f"
-// .ico.filter:before
-//   content: "\e889"
-// .ico.terminal-1:before
-//   content: "\e888"
-// .ico.search:before
-//   content: "\e800"
-// .ico.flashlight:before
-//   content: "\e801"
-// .ico.layout:before
-//   content: "\e802"
-// .ico.menu:before
-//   content: "\e803"
-// .ico.back:before
-//   content: "\e851"
-// .ico.home:before
-//   content: "\e852"
-// .ico.link:before
-//   content: "\e804"
-// .ico.attach:before
-//   content: "\e805"
-// .ico.eye:before
-//   content: "\e857"
-// .ico.tag:before
-//   content: "\e858"
-// .ico.bookmark:before
-//   content: "\e806"
-// .ico.bookmarks:before
-//   content: "\e807"
-// .ico.flag:before
-//   content: "\e808"
-// .ico.quote:before
-//   content: "\e809"
-// .ico.code:before
-//   content: "\e80a"
-// .ico.export:before
-//   content: "\e80b"
-// .ico.pencil:before
-//   content: "\e80c"
-// .ico.feather:before
-//   content: "\e80d"
-// .ico.retweet:before
-//   content: "\e80e"
-// .ico.keyboard:before
-//   content: "\e856"
-// .ico.comment:before
-//   content: "\e80f"
-// .ico.chat:before
-//   content: "\e810"
-// .ico.bell:before
-//   content: "\e811"
-// .ico.attention:before
-//   content: "\e812"
-// .ico.alert:before
-//   content: "\e813"
-// .ico.vcard:before
-//   content: "\e855"
-// .ico.address:before
-//   content: "\e854"
-// .ico.location:before
-//   content: "\e853"
-// .ico.map:before
-//   content: "\e859"
-// .ico.direction:before
-//   content: "\e814"
-// .ico.cup:before
-//   content: "\e815"
-// .ico.trash:before
-//   content: "\e816"
-// .ico.book:before
-//   content: "\e817"
-// .ico.folder:before
-//   content: "\e818"
-// .ico.cog:before
-//   content: "\e819"
-// .ico.tools:before
-//   content: "\e81a"
-// .ico.share:before
-//   content: "\e81b"
-// .ico.shareable:before
-//   content: "\e81c"
-// .ico.calendar:before
-//   content: "\e81d"
-// .ico.login:before
-//   content: "\e81e"
-// .ico.logout:before
-//   content: "\e81f"
-// .ico.clock:before
-//   content: "\e820"
-// .ico.hourglass:before
-//   content: "\e821"
-// .ico.lamp:before
-//   content: "\e822"
-// .ico.popup:before
-//   content: "\e823"
-// .ico.down-open:before
-//   content: "\e824"
-// .ico.left-open:before
-//   content: "\e825"
-// .ico.right-open:before
-//   content: "\e826"
-// .ico.up-open:before
-//   content: "\e827"
-// .ico.down-open-mini:before
-//   content: "\e828"
-// .ico.down-dir:before
-//   content: "\e829"
-// .ico.left-dir:before
-//   content: "\e82a"
-// .ico.right-dir:before
-//   content: "\e82b"
-// .ico.up-dir:before
-//   content: "\e82c"
-// .ico.ccw:before
-//   content: "\e82d"
-// .ico.cw:before
-//   content: "\e82e"
-// .ico.arrows-ccw:before
-//   content: "\e82f"
-// .ico.level-down:before
-//   content: "\e830"
-// .ico.level-up:before
-//   content: "\e831"
-// .ico.shuffle:before
-//   content: "\e832"
-// .ico.loop:before
-//   content: "\e833"
-// .ico.switch:before
-//   content: "\e834"
-// .ico.target:before
-//   content: "\e835"
-// .ico.list:before
-//   content: "\e836"
-// .ico.list-add:before
-//   content: "\e837"
-// .ico.flash:before
-//   content: "\e85e"
-// .ico.moon:before
-//   content: "\e85d"
-// .ico.flight:before
-//   content: "\e85c"
-// .ico.paper-plane:before
-//   content: "\e85b"
-// .ico.leaf:before
-//   content: "\e85a"
-// .ico.lifebuoy:before
-//   content: "\e838"
-// .ico.mouse:before
-//   content: "\e839"
-// .ico.briefcase:before
-//   content: "\e83a"
-// .ico.suitcase:before
-//   content: "\e83b"
-// .ico.magnet:before
-//   content: "\e83c"
-// .ico.infinity:before
-//   content: "\e83d"
-// .ico.erase:before
-//   content: "\e83e"
-// .ico.chart-pie:before
-//   content: "\e83f"
-// .ico.chart-line:before
-//   content: "\e840"
-// .ico.chart-bar:before
-//   content: "\e841"
-// .ico.graduation-cap:before
-//   content: "\e85f"
-// .ico.ticket:before
-//   content: "\e842"
-// .ico.air:before
-//   content: "\e843"
-// .ico.floppy:before
-//   content: "\e844"
-// .ico.clipboard:before
-//   content: "\e845"
-// .ico.megaphone:before
-//   content: "\e846"
-// .ico.database:before
-//   content: "\e847"
-// .ico.bucket:before
-//   content: "\e848"
-// .ico.key:before
-//   content: "\e849"
-// .ico.flow-cascade:before
-//   content: "\e84a"
-// .ico.flow-branch:before
-//   content: "\e84b"
-// .ico.flow-tree:before
-//   content: "\e84c"
-// .ico.flow-line:before
-//   content: "\e84d"
-// .ico.flow-parallel:before
-//   content: "\e84e"
-// .ico.rocket:before
-//   content: "\e84f"
-// .ico.gauge:before
-//   content: "\e850"
-// .ico.link-1:before
-//   content: "\e865"
-// .ico.wrench:before
-//   content: "\e864"
-// .ico.list-1:before
-//   content: "\e863"
-// .ico.book-3:before
-//   content: "\e890"
-// .ico.book-alt:before
-//   content: "\e891"
-// .ico.layers:before
-//   content: "\e860"
-// .ico.umbrella:before
-//   content: "\e862"
-// .ico.hash:before
-//   content: "\e861"
-// .ico.at:before
-//   content: "\e866"
-// .ico.search-1:before
-//   content: "\e867"
-// .ico.th:before
-//   content: "\e875"
-// .ico.th-list:before
-//   content: "\e871"
-// .ico.ok:before
-//   content: "\e872"
-// .ico.cancel:before
-//   content: "\e873"
-// .ico.plus:before
-//   content: "\e874"
-// .ico.eye-1:before
-//   content: "\e868"
-// .ico.article:before
-//   content: "\e870"
-// .ico.grid:before
-//   content: "\e86c"
-// .ico.book-1:before
-//   content: "\e876"
-// .ico.easel:before
-//   content: "\e86d"
-// .ico.chart-bar-1:before
-//   content: "\e86e"
-// .ico.chart-pie-1:before
-//   content: "\e86f"
-// .ico.at-1:before
-//   content: "\e869"
-// .ico.colon:before
-//   content: "\e86a"
-// .ico.semicolon:before
-//   content: "\e86b"
-// .ico.bicycle:before
-//   content: "\e87a"
-// .ico.cafe:before
-//   content: "\e87f"
-// .ico.campsite:before
-//   content: "\e87b"
-// .ico.embassy:before
-//   content: "\e880"
-// .ico.garden:before
-//   content: "\e877"
-// .ico.golf:before
-//   content: "\e87d"
-// .ico.harbor:before
-//   content: "\e87c"
-// .ico.library:before
-//   content: "\e87e"
-// .ico.tree-1:before
-//   content: "\e878"
-// .ico.tree-2:before
-//   content: "\e879"
-// .ico.tag-1:before
-//   content: "\e886"
-// .ico.tags:before
-//   content: "\e887"
-// .ico.bookmark-2:before
-//   content: "\e88d"
-// .ico.bookmark-empty-1:before
-//   content: "\e88e"
-// .ico.qrcode:before
-//   content: "\e885"
-// .ico.book-4:before
-//   content: "\e892"
-// .ico.asterisk:before
-//   content: "\e881"
-// .ico.filter-1:before
-//   content: "\e88a"
-// .ico.glasses:before
-//   content: "\e882"
-// .ico.code-1:before
-//   content: "\e884"
-// .ico.terminal:before
-//   content: "\e883"
