--- a/styles/main.styl
+++ b/styles/main.styl
@@ -9,6 +9,9 @@ nibdir = '../node_modules/nib'
 html, body
   height 100%
 
+.hidden
+  display: none
+
 body
   color txtClr
   background: #f0f0f0
@@ -38,5 +41,3 @@ header
 
 @import 'nav'
 @import 'bookmarks'
-
-generateGrid(300, 1,3)
