--- a/styles/utils.styl
+++ b/styles/utils.styl
@@ -44,6 +44,8 @@ btn()
   color btnClr
   text-shadow 0 1px 0 #fff
   -webkit-appearance button
+  &:hover
+    color darken(@color,20)
 
 scrollY()
   overflow-x: hidden
