--- a/styles/nav.styl
+++ b/styles/nav.styl
@@ -37,9 +37,8 @@ input[type="text"]
   brd(0 0 0 1px #ccc)
 
 input[type="radio"]
-  // size: (step*1.5)
   &:checked
-    // btnGrHov()
+    btnGrHov()
     text-shadow 0 -1px 0 #fff
 
 
